another chunk of zhao, just need event loc

--- a/localization/english/missions/zhao_missions_l_english.yml
+++ b/localization/english/missions/zhao_missions_l_english.yml
@@ -8,7 +8,7 @@
  #Missions
 
  zhao_missions_task_1: "Hufu Riding and Archery"
- zhao_missions_task_1_DESC: "[GetCharacter('(int32)610').GetName] once suggested that we not look at the #E Di#! tribesman in #E Loufan#! as backward nuisances, but as a source of inspiration for our military - the wild barbarian must be made of steel to survive in the badlands to the north.\n\n\n\n\n\n\n\n\n\n@china_mil1!"
+ zhao_missions_task_1_DESC: "[GetCharacter('(int32)610').GetName] once suggested that we not look at the #E Di#! tribesman in #E Loufan#! as backward nuisances, but as a source of inspiration for our military - the wild barbarian must be made of steel to survive in the badlands to the north.\n\n\n\n\n\n\n\n\n\n@east_steppemil1!"
 
  zhao_missions_task_2: "Deal with Opposition at Court"
  zhao_missions_task_2_DESC: "Despite all efforts of goodwill, [GetCharacter('(int32)609').GetName] remains a problem that must be dealt with, one way or the other. Before [ROOT.GetCountry.GetRuler.GetName] feels comfortable moving forward with [ROOT.GetCountry.GetRuler.GetHerHis] plans, any opposition at court must be silenced - the actions of [GetCharacter('(int32)609').GetName] have brought shame upon the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] House. \n\n\n\n\n\n\n\n\n\n@china_mil6!"
@@ -41,43 +41,43 @@
  zhao_missions_task_11_DESC: "The armies of [GetCountry('WEI').GetName] have crossed their side of the #E River He#! to seize valuable farmlands that we view as our own. The time has come to silence the yapping of this barking dog and to take what is rightfully ours. \n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  zhao_missions_task_12: "Heshibi Incident"
- zhao_missions_task_12_DESC: ""
+ zhao_missions_task_12_DESC: "What a fool [ROOT.GetCountry.GetRuler.GetName] has been, to listen to the deceitful words of [GetCountry('QIN').GetRuler.GetName], the Lord of the [GetCountry('QIN').GetName]. They have made us an impudent offer that we graciously accepted, but now they claim to have never said such things, implying that we are liars - what an insult to our honor! \n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
  zhao_missions_task_13: "Mausoleum of the Kings of Zhao"
  zhao_missions_task_13_DESC: "Let us not forget the House of Ying, who have accomplished great deeds that are worthy of remembering forevermore - we must build an eternal resting place worthy of the noble line of warrior-kings that led our nation through difficult times. \n\n\n\n\n\n\n\n\n\n@tibet_mil12!"
 
  zhao_missions_task_14: "Promote Zao She"
- zhao_missions_task_14_DESC: ""
+ zhao_missions_task_14_DESC: "One of our most respected countrymen, a bureaucrat named #E Zao She#! that is famed for being an honest Minister of Revenues, has requested permission to lead armies for the banner of [GetCountry('ZHA').GetName], and [ROOT.GetCountry.GetRuler.GetName] is inclined to permit this; Zao is a skilled administrator and has proven his genius time and time again. \n\n\n\n\n\n\n\n\n\n@china_mil10!"
 
  zhao_missions_task_15: "Han Protectorate"
- zhao_missions_task_15_DESC: ""
+ zhao_missions_task_15_DESC: "The [GetCountry('HAN').GetName] are a proud people and worthy of the many accolades they have received, and yet is has become clear to [ROOT.GetCountry.GetRuler.GetName] that they would thrive underneath the gentle hands of Zhao overlordship. The time has come to turn this vision into a reality. \n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  zhao_missions_task_16: "Li Mu"
- zhao_missions_task_16_DESC: ""
+ zhao_missions_task_16_DESC: "We live in an era where legendary generals can be found leading the armies of all of the great powers, and yet #E Li Mu#! stands head and shoulders above any that currently serve [GetCountry('ZHA').GetName]. We should recruit the master immediately! \n\n\n\n\n\n\n\n\n\n@tibet_mil8!"
 
  zhao_missions_task_17: "Lian Po's Defensive Line"
- zhao_missions_task_17_DESC: ""
+ zhao_missions_task_17_DESC: "One of the greatest generals in the history of warfare, #E Lian Po#!, has proposed that we construct a series of fortifications that will protect us from enemy incursion. \n\n\n\n\n\n\n\n\n\n@greek_mil1!"
 
  zhao_missions_task_18: "Xiongnu Threat"
- zhao_missions_task_18_DESC: ""
+ zhao_missions_task_18_DESC: "We absolutely cannot allow the terrifying [GetCountry('XNU').GetName] barbarians to control the caravan routes that lead into the steppes, for if the horselords have these territories in their possession, they will be able to raid us with impunity - this threat must be dealt with! \n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
  zhao_missions_task_19: "Quash Qin"
- zhao_missions_task_19_DESC: ""
+ zhao_missions_task_19_DESC: "Slowly but surely, the armies of our rival [GetCountry('QIN').GetName] are being pushed back by our advancing forces. The morale of the enemy is lower than it has ever been, and it has become clear to [ROOT.GetCountry.GetRuler.GetName] that the time has come to quash Qin once and for all. \n\n\n\n\n\n\n\n\n\n@east_steppemil10!"
 
  zhao_missions_task_20: "Sinus Bohai"
- zhao_missions_task_20_DESC: ""
+ zhao_missions_task_20_DESC: "The calm and prosperous waters of the #E Sinus Bohai#! will soon see fleets of Zhao warships patrolling the sea. And yet [ROOT.GetCountry.GetRuler.GetName]'s appetites for coastal territories has only grown, and the [ROOT.GetCountry.GetRulerTitle] has made it known that the rich provinces of the [GetCountry('YAN').GetName] are irresistible to [ROOT.GetCountry.GetRuler.GetHerHim]...\n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
  zhao_missions_task_21: "Lands of the Jin"
- zhao_missions_task_21_DESC: ""
+ zhao_missions_task_21_DESC: "Who can dare oppose the will of [ROOT.GetCountry.GetRuler.GetName], who sends the armies of Zhao wherever [ROOT.GetCountry.GetRuler.GetSheHe] pleases? Can any force be mustered to keep the mighty Zhao from overrunning the lands of the Jin? We shall chase our enemies even unto the #E Zhongyuan Mountains#! - there shall be no refuge for them anywhere.\n\n\n\n\n\n\n\n\n\n@tibet_mil4!"
 
  zhao_missions_task_22: "Great War of Unification"
- zhao_missions_task_22_DESC: ""
+ zhao_missions_task_22_DESC: "At long last, the moment of victory is tantalizingly close, just barely out of the reach of [ROOT.GetCountry.GetRuler.GetName]'s fingers. Let us not delay from achieving immortal glory, but let us destroy the last impediments to the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] claiming all of the Middle Kingdom! \n\n\n\n\n\n\n\n\n\n@china_mil5!"
 
  zhao_missions_task_23: "Zhao Military Academy"
- zhao_missions_task_23_DESC: ""
+ zhao_missions_task_23_DESC: "In order to preserve the hard-earned military knowledge that our victorious forces have amassed over the last years, it has been decided that we shall construct a #E Zhao Military Academy#! in order to transmit these secrets to the next generation of Zhao warriors. \n\n\n\n\n\n\n\n\n\n@tibet_mil3!"
 
  zhao_missions_task_24: "Zhao Dynasty"
- zhao_missions_task_24_DESC: ""
+ zhao_missions_task_24_DESC: "Thanks to the brilliant efforts of [ROOT.GetCountry.GetRuler.GetName], the [GetCountry('ZHA').GetName] stands at the pinnacle of power, and a golden age is truly upon the people. All hail [ROOT.GetCountry.GetRuler.GetFirstName] and all hail the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] Dynasty!\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
 
  #Events 
@@ -195,29 +195,29 @@
  me_zhao_24.a: ""
  
  me_zhao_25_title: "At A Good Time On An Auspicious Day" #first line from a Warring States-era poem 'the songs of chu'
- me_zhao_25_desc: "The gods have been kind to [ROOT.GetCountry.GetRuler.GetName], although the path that they set before him has never been an easy road to travel. Life consists of the usual fare for a [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle], protector of his people and defender of ancient tradition; occasional regional rebellions, pretenders to the throne pressing ill-advised claims, scandalous intrigues at court...enough to make a man weary, lamenting the heavy weight of the crown upon his brow.\n\nAnd yet things could be worse for [ROOT.GetCountry.GetRuler.GetName], and he knows it; he has a skilled minister that eases his administrative burders in [GetCharacter('(int32)610').GetName], and although [GetCharacter('(int32)609').GetName] desires a greater role for himself, this is but a fool's dream, for the people - and the soldiers - are with [ROOT.GetCountry.GetRuler.GetFirstName] and his growing family. His six-year old son [GetCharacter('(int32)493').GetName], the youngest member of the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] clan, is inseparable from his father and follows him everywhere; truly, a parent's delight, a gift upon a blessing.\n\nAnd yet, there are many mournful days where the King often daydreams of retiring from his responsibilities at [ROOT.GetCountry.GetCapital.GetName]."
+ me_zhao_25_desc: "The gods have been kind to [ROOT.GetCountry.GetRuler.GetName], although the path that they set before him has never been an easy road to travel. Life consists of the usual fare for a [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle], protector of his people and defender of ancient tradition; occasional regional rebellions, pretenders to the throne pressing ill-advised claims, scandalous intrigues at court...enough to make a man weary, lamenting the heavy weight of the crown upon his brow.\n\nAnd yet things could be worse for [ROOT.GetCountry.GetRuler.GetName], and he knows it; he has a skilled minister that eases his administrative burders in [GetCharacter('(int32)610').GetName], and together, the two men are working together to transform Zhao society. Not everyone is on board with these plans, however; some family members, like [GetCharacter('(int32)609').GetName], are opposed to adopting Hufu riding traditions and their manner of clothing. Despite [GetCharacter('(int32)610').GetFirstName]'s efforts to convince [GetCharacter('(int32)609').GetFirstName] to embrace these reforms, [ROOT.GetCountry.GetRuler.GetFirstName]'s uncle remains a destabilizing influence at the royal court, a rumbling storm on the horizon.\n\nYet not all is troublesome with family; [ROOT.GetCountry.GetRuler.GetFirstName]'s six-year old son [GetCharacter('(int32)493').GetName], the youngest member of the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] clan, is inseparable from his father and follows him everywhere; truly, a parent's delight, a gift upon a blessing.\n\nAnd yet, there are many mournful days where the King often daydreams of retiring from his responsibilities at [ROOT.GetCountry.GetCapital.GetName] altogether..."
  me_zhao_25.a: "One day I will get what I have truly desired, but now there is work to do"
  
  #Tooltips
  zhao_missions_task_4_wuyuan_area_fort_civ_20: "We have a fort in the Area of Wuyuan with a civilization value of at least 20."
  zhao_missions_task_5_levy_or_feudatories: "We will be able to choose between a levy bonus or tighter integration of our tribal vassals."
- zhao_missions_task_8_claims_tt: "CLAIM TODO"
- zhao_missions_task_11_claims_tt: "CLAIM TODO"
- zhao_missions_task_12_claims_tt: "CLAIM TODO"
- zhao_missions_task_15_claims_tt: "CLAIM TODO"
- zhao_missions_task_16_claims_tt: "CLAIM TODO"
- zhao_missions_task_19_claims_tt: "CLAIM TODO"
- zhao_missions_task_20_claims_tt: "CLAIM TODO"
+ zhao_missions_task_8_claims_tt: "We will receive claims on the #Y Handan#!, #Y Wei#!, #Y Henei#!, #Y Shangdang#! and #Y Hedong#! areas."
+ zhao_missions_task_11_claims_tt: "We will receive claims on the #Y Henan#!, #Y Yingchuan#!, #E Dong#! and #Y Daliang#! areas."
+ zhao_missions_task_12_claims_tt: "We will receive claims on the #Y Shang#!, #Y Xihe#! and #Y Taiyuan#! areas."
+ zhao_missions_task_15_claims_tt: "We will receive claims on the #Y Xianyang#!, #Y Changan#!, #E Yueyang#!, #E Hongnong#! and #Y Hedong#! areas."
+ zhao_missions_task_16_claims_tt: "We will receive claims on the #Y Yingshan North#!, #Y Bohai#!, #E Hejian#!, #E Pingyuan#!, #E Qianshang#! and #Y Qinghe#! areas."
+ zhao_missions_task_19_claims_tt: "We will receive claims on every province in the #Y Yu#! region."
+ zhao_missions_task_20_claims_tt: "We will receive claims on every territory owned by #Y Yan#!."
  zhao_missions_task_11_wei_doesnt_own_henei_handan_wei: "Wei doesn't own any territories in the Areas of Henei, Handan and Wei."
  zhao_missions_task_15_annex_han: "We will annex our subject Han."
  zhao_missions_task_18_2_forts_in_yinshan: "We own two forts in the Area of Yinshan."
  zhao_missions_task_18_xiongnu_doesnt_own_fuyangju: "The Xiongnu don't own any territory in the Area of Fuyangju."
- zhao_missions_task_23_enable_decision_academy: "We will unlock the Zhao Military Academy decision."
+ zhao_missions_task_23_enable_decision_academy: "We will unlock the #Y Zhao Military Academy#! decision."
  
  #Decision
- zhao_military_academy_decision: "TODO"
- zhao_military_academy_decision_desc: "OTOD"
- zhao_military_academy_decision_cd_tt: "We can only recruit every 20 years."
+ zhao_military_academy_decision: "Recruit an Elite General from the Zhao Military Academy"
+ zhao_military_academy_decision_desc: "Every generation, a new class of warriors graduates from the prestigious #E Zhao Military Academy#! that was founded in order to train elite generals. As such, it is the royal prerogative to request that the finest military soldiers come to personally lead the armies of the Zhao."
+ zhao_military_academy_decision_cd_tt: "We can only recruit every twenty years."
  
  #Modifiers
  hufu_riding_zhao: "Horse Archer Battalions"
@@ -226,10 +226,10 @@
  desc_zhao_idioms: "The wit and wisdom that is found in our folk-tales and common speech have earned us accolades from neighboring states."
  zhao_heshibi: "TODO"
  desc_zhao_heshibi: "TODO"
- lian_po_defensive: "TODO"
- desc_lian_po_defensive: "TODO"
- zhao_levy_mission_mod: "TODO"
- desc_zhao_levy_mission_mod: "TODO"
- zhao_final_mod: "TODO"
- desc_zhao_final_mod: "TODO"
+ lian_po_defensive: "The Unbreakable Line"
+ desc_lian_po_defensive: "Lian Po, one of the greatest generals to ever live, personally oversaw the construction of these indomitable fortifications."
+ zhao_levy_mission_mod: "Barbarian Auxilaries"
+ desc_zhao_levy_mission_mod: "The King of Zhao has allowed barbarian auxiliaries to fight and train alongside the country's levies."
+ zhao_final_mod: "Supreme Ascendancy"
+ desc_zhao_final_mod: "The Zhao have conquered all that opposed them, ushering in a new era where they are the Masters and Lords over all of China."
  
