emishi tree work, new decision file for ti formabl

--- a/localization/english/acb_cultures_l_english.yml
+++ b/localization/english/acb_cultures_l_english.yml
@@ -103,11 +103,12 @@
  wa:0 "Wa"
  kumaso:0 "Kumaso"
  aduma:0 "Aduma"
- #
- ainu:0 "Ezo"
- dewa:0 "Dewa"
- sunazawa:0 "Sunazawa"
- mitinooku:0 "Sirakawa"
+ # Jomon cultures, moved by Izn
+ #ainu:0 "Ezo"
+ #dewa:0 "Dewa"
+ #sunazawa:0 "Sunazawa"
+ #mitinooku:0 "Sirakawa"
+ #emishi:0 "Emishi"
  #
  loulan:0 "Loulan"
  #Naming
