--- a/localization/english/flavorization_l_english.yml
+++ b/localization/english/flavorization_l_english.yml
@@ -129,6 +129,12 @@ AIU_NAME:0 "Jomon"
 AIU_ADJECTIVE:0 "Jomon"
 AIU:0 "Jomon"
 
+form_ainu2:0 "Form Ainu"
+form_ainu2_desc:0 "The distant islands to the north belong to us. By right of conquest, we claim Hokkaido as the homeland for a new people, the Ainu people, where the Susuya traders and northern Hokkaido Jomon meet together."
+AIN_NAME:0 "Ainu"
+AIN_ADJECTIVE:0 "Ainu"
+AIN:0 "Ainu"
+
 
 form_jin:0 "Restoration of Jin"
 form_jin_desc:0 "A few generations ago, the lands of Jin were partitioned and divided between the Han, Zhao and Wei; an epochal moment in our histories, and one that some say should have never happened. But now, the misdeeds of the past have been atoned for, and Jin has been pieced together by our hands; all that remains left to do is to announce our triumphant rebirth."
