--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -227,122 +227,132 @@
  emishi_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have united the [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Tohoku#!."
  emishi_missions_BUTTON_TOOLTIP:0 "The Kamuy will lead the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] to victory!"
 
- emishi_missions_task_1:0 "Fun of Hit and Run"
+ emishi_missions_task_1:0 "Fun of Hit and Run" # Dewa
  emishi_missions_task_1_DESC:0 "The #E Dewa#! people were infamous to the #E Yayoi#! they bordered. They specialized in #Y Hit and Run#! tactics unlike anything else the #E Yayoi#! would have to deal with. We will have to make use of this signature of ours if we want to survive the never-ending expanse of #E Yayoi#! culture."
 
- emishi_missions_task_2:0 "Secrets of Rice"
- emishi_missions_task_2_DESC:0 "#Y Rice#! is typically associated with the #E Yayoi#!... except for the crafty #E Jomon#! known as the #E Sunazawa#!. The #E Sunazawa#! had adopted the signature #Y Rice#! cultivation of the #E Yayoi#! as early as 340 BCE! The power of #Y Rice#! was a major factor in the eventual success of the #E Yayoi#! and the eventual decline of the #E Jomon#!. We will turn the #E Yayoi's#!# greatest tool against them."
+ emishi_missions_task_2:0 "Secrets of Rice" # Sunazawa
+ emishi_missions_task_2_DESC:0 "#Y Rice#! is typically associated with the #E Yayoi#!... except for the crafty #E Jomon#! known as the #E Sunazawa#!. The #E Sunazawa#! had adopted the signature #Y Rice#! cultivation of the #E Yayoi#! as early as 340 BCE! The power of #Y Rice#! was a major factor in the eventual success of the #E Yayoi#! and the eventual decline of the #E Jomon#!. We will turn the #E Yayoi's#!# greatest tool against them.\n\nThis will add #G 1 point#! towards #Y Yayoification#!."
 
- emishi_missions_task_3:0 "Merchants by Day, Migrants by Night"
- emishi_missions_task_3_DESC:0 "The #E Sirakawa#! people would escape the every-growing #E Yayoi#! culture by migrating away towards #E Hokkaido#!. Meanwhile, they would focus on trading with their #E Jomon#! relatives to the north. Naturally, this trade incentive would only further draw them northward up the coast toawards #E Hokkaido#!."
+ emishi_missions_task_3:0 "Merchants by Day, Migrants by Night" # Sirakawa
+ emishi_missions_task_3_DESC:0 "The #E Sirakawa#! people would escape the every-growing #E Yayoi#! culture by migrating away towards #T Hokkaido#!. Meanwhile, they would focus on trading with their #E Jomon#! relatives to the north. Naturally, this trade incentive would only further draw them northward up the coast toawards #T Hokkaido#!."
 
  emishi_missions_task_4:0 "Threats in Tohoku"
- emishi_missions_task_4_DESC:0 ""
+ emishi_missions_task_4_DESC:0 "#T Tohoku#! is what refers to our immediate region of northern #T Honshu#!. It encompasses the vast majority of the #E Jomon#! tribes left on #E Wa#!. However, this is far from a stagnant status quo, and there are many threats for us to face. Let us address them."
 
- emishi_missions_task_5:0 "Jomon Infighting"
- emishi_missions_task_5_DESC:0 ""
+ emishi_missions_task_5:0 "A Jomon Jamboree"
+ emishi_missions_task_5_DESC:0 "The #E Jomon#! tribes and peoples across #T Tohoku#! are quite distinct from each other, yet, there is a thought amongst few to unite them. No longer would we have violence between the #E Jomon#! of #T Tohoku#! after all."
 
- emishi_missions_task_6:0 "Yayoi Cultural War"
- emishi_missions_task_6_DESC:0 ""
+ emishi_missions_task_6:0 "Nefarious Neighbors"
+ emishi_missions_task_6_DESC:0 "The #E Yayoi#! have largely replaced the #E Jomon#! across most of #T Honshu#! already. We need to push them back and take #T Tohoku#! for ourselves, lest the #E Yayoi#! push even further."
 
- emishi_missions_task_7:0 "Colonize the West"
- emishi_missions_task_7_DESC:0 ""
+ emishi_missions_task_7:0 "Coastal Corridor" # Dewa
+ emishi_missions_task_7_DESC:0 "The #Y Dewa#! people are a mixture of the original #E Jomon#! people who inhabited the region as well as #E Jomon#! people from deeper in #T Honshu#!. It's time we reclaim the coast for ourselves."
 
- emishi_missions_task_8:0 "Claim Hokkaido"
- emishi_missions_task_8_DESC:0 ""
+ emishi_missions_task_8:0 "Second Home in Hokkaido" # Sunazawa Exclusive
+ emishi_missions_task_8_DESC:0 "The #Y Sunazawa#! people are pushed to the very edge of the main island of [GetProvince('(int32)9328').GetArea.GetRegion.GetName|Y]. Thus, trading is very frequent with the #Y Ezo#! Jomon in #T Hokkaido#!. It's time to estabish a summer home, so to speak, in the land of the #Y Ezo#! and conquer it for ourseves."
 
- emishi_missions_task_9:0 "Cooking in Kotaku"
- emishi_missions_task_9_DESC:0 ""
+ emishi_missions_task_9:0 "The Empty East" # Sirakawa
+ emishi_missions_task_9_DESC:0 "Many in the more settled areas of the #E Jomon#! world may consider eastern #T Honshu#! as an empty land. As the #Y Sirakawa#!, we know much better. Our bretheren live off the land as our ancestors did, and we can easily claim the 'empty' lands as our own, establishing a grand #Y Sirakawa#! tribe."
 
- emishi_missions_task_10:0 ""
- emishi_missions_task_10_DESC:0 ""
+ emishi_missions_task_10:0 "Unity Among Emishi"
+ emishi_missions_task_10_DESC:0 "The term #E Emishi#! would come to group together the last of the #E Jomon#! cultures on #T Honshu#!, including the #Y Dewa#!, #Y Sunazawa#!, and #Y Sirakawa#! peoples. Once united, a great #E Pan-Emishi#! tribe would stand against any #E Yayoi#! or other invadors of what we call home."
 
- emishi_missions_task_11:0 ""
- emishi_missions_task_11_DESC:0 ""
+ emishi_missions_task_11:0 "Disparate Differences"
+ emishi_missions_task_11_DESC:0 "We the [GetCulture('wa').GetName|Y] were the ones to unify the #E Jomon#! of #T Honshu#!! Unfortunately, unlike the neighboring #E Yayoi#!, the #E Jomon#! tribes are much less related to one another. We need to put in extra work before us three groups can truly become one."
 
- emishi_missions_task_12:0 ""
- emishi_missions_task_12_DESC:0 ""
+ emishi_missions_task_12:0 "The [GetCulture('wa').GetName|Y] Elite"
+ emishi_missions_task_12_DESC:0 "[GetCulture('wa').GetName|Y] is our primary culture. Any other #E Jomon#! culture is as distant to us than the #E Yayoi#!! We should establish a primacy over all other #E Jomons#! and use it as a basis for our new #Y Emishi#! culture!\n\n#E This will effect which #Y pops#! are converted to #Y Emishi#! culture."
 
- emishi_missions_task_13:0 ""
- emishi_missions_task_13_DESC:0 ""
+ emishi_missions_task_13:0 "#E Jomon#! Together Strong"
+ emishi_missions_task_13_DESC:0 "All three of our peoples share one thing in common: our land has been infringed upoon by the #E Yayoi#!. In promoting cultural unity, we will be born anew as an all-inclusive #Y Emishi#! culture!\n\n#E This will effect which #Y pops#! are converted to #Y Emishi#! culture."
 
- emishi_missions_task_14:0 ""
- emishi_missions_task_14_DESC:0 ""
+ emishi_missions_task_14:0 "Emergent Emishi Culture"
+ emishi_missions_task_14_DESC:0 "Whether through establishing an elite class above others or by establishing a mutual understanding between them, our efforts will pay off. A new emergent #Y Emishi#! culture will be adopted. As time progresses, so too will this culture develop into something greater than its original form."
 
 #Tooltips
+ sirakawa_settle_tt:0 "Immediately #Y colonize#! all #Y uncolonized#! provinces with #E Sirakawa#! culture."
+ need_food_building_tt:0 "Any owned province has a #Y Farming Settlement#! building."
+ oratory_focus_tree_enabled_tt:0 "[ROOT.GetCountry.GetRulerTitle|E] [ROOT.GetCountry.GetRuler.GetPraenomen|E] has the #Y Oratory Character Focus#!."
+ yayoification_add_1_tt:0 "#Y Yayoification#! increases by #G 1#! point."
 
 #Modifiers
+ emishi_tactics:0 "Hit and Run Tactics"
+ secret_of_rice:0 "Secrets of Rice"
+ emishi_elite:0 "Emishi Elitism"
+ emishi_equal:0 "Emishi Equality"
 
 #Decisions
 
 #Others
- 
- me_emishi_1_title:0 ""
- me_emishi_1_desc:0 ""
- me_emishi_1.a:0 ""
+ emishi_electric:0 "Elegence of the Emishi"
+
+#Events
+ me_emishi_1_title:0 "$emishi_missions_task_1$"
+ me_emishi_1_desc:0 "The successful implementation of #E Hit and Run Tactics#! will surely be in the nightmares of any #E Yayoi#! tribe on our borders. While some call it cowardice, we know better that it is simply a way of survival; and a seemingly successful one at that."
+ me_emishi_1.a:0 "A perfect tool to curb their arrogance."
  me_emishi_1_tooltip:0 "The mission task '#Y $emishi_missions_task_1$#!' has now been #G Completed#!!"
 
- me_emishi_2_title:0 ""
- me_emishi_2_desc:0 ""
- me_emishi_2.a:0 ""
+ me_emishi_2_title:0 "$emishi_missions_task_2$"
+ me_emishi_2_desc:0 "The secret of rice goes far back in #E Wa#! history. It was because of the implementation of rice that the #E Yayoi#! population would grow so large so quickly while #E Jomon#! populations continued to dwindle. Now the tables will be turned surely."
+ me_emishi_2.a:0 "Rice will raise our numbers by thrice!"
  me_emishi_2_tooltip:0 "The mission task '#Y $emishi_missions_task_2$#!' has now been #G Completed#!!"
 
- me_emishi_3_title:0 ""
+ me_emishi_3_title:0 "$emishi_missions_task_3$"
  me_emishi_3_desc:0 ""
  me_emishi_3.a:0 ""
  me_emishi_3_tooltip:0 "The mission task '#Y $emishi_missions_task_3$#!' has now been #G Completed#!!"
 
- me_emishi_4_title:0 ""
- me_emishi_4_desc:0 ""
- me_emishi_4.a:0 ""
+ me_emishi_4_title:0 "$emishi_missions_task_4$"
+ me_emishi_4_desc:0 "#E Tohoku#! has many events happening all at once. The increased migrations of the #E Sirakawa#!. The increased agression and influence of the #E Dewa#!. The traderoutes of the #E Sunazawa#! continuing to move to #E Hokkaido#!. And, of course, the matter of the many #E Yayoi#! tribes, everpushing their boundaries further and further onto #E Jomon#! lands. We must decide which problems to tackle first, but surely all these issues must be addressed."
+ me_emishi_4.a:0 "Enough talk, time to get to it."
  me_emishi_4_tooltip:0 "The mission task '#Y $emishi_missions_task_4$#!' has now been #G Completed#!!"
 
- me_emishi_5_title:0 ""
+ me_emishi_5_title:0 "$emishi_missions_task_5$"
  me_emishi_5_desc:0 ""
  me_emishi_5.a:0 ""
  me_emishi_5_tooltip:0 "The mission task '#Y $emishi_missions_task_5$#!' has now been #G Completed#!!"
 
- me_emishi_6_title:0 ""
+ me_emishi_6_title:0 "$emishi_missions_task_6$"
  me_emishi_6_desc:0 ""
  me_emishi_6.a:0 ""
  me_emishi_6_tooltip:0 "The mission task '#Y $emishi_missions_task_6$#!' has now been #G Completed#!!"
 
- me_emishi_7_title:0 ""
+ me_emishi_7_title:0 "$emishi_missions_task_7$"
  me_emishi_7_desc:0 ""
  me_emishi_7.a:0 ""
  me_emishi_7_tooltip:0 "The mission task '#Y $emishi_missions_task_7$#!' has now been #G Completed#!!"
 
- me_emishi_8_title:0 ""
+ me_emishi_8_title:0 "$emishi_missions_task_8$"
  me_emishi_8_desc:0 ""
  me_emishi_8.a:0 ""
  me_emishi_8_tooltip:0 "The mission task '#Y $emishi_missions_task_8$#!' has now been #G Completed#!!"
 
- me_emishi_9_title:0 ""
+ me_emishi_9_title:0 "$emishi_missions_task_9$"
  me_emishi_9_desc:0 ""
  me_emishi_9.a:0 ""
  me_emishi_9_tooltip:0 "The mission task '#Y $emishi_missions_task_9$#!' has now been #G Completed#!!"
 
- me_emishi_10_title:0 ""
+ me_emishi_10_title:0 "$emishi_missions_task_10$"
  me_emishi_10_desc:0 ""
  me_emishi_10.a:0 ""
  me_emishi_10_tooltip:0 "The mission task '#Y $emishi_missions_task_10$#!' has now been #G Completed#!!"
 
- me_emishi_11_title:0 ""
+ me_emishi_11_title:0 "$emishi_missions_task_11$"
  me_emishi_11_desc:0 ""
  me_emishi_11.a:0 ""
  me_emishi_11_tooltip:0 "The mission task '#Y $emishi_missions_task_11$#!' has now been #G Completed#!!"
 
- me_emishi_12_title:0 ""
+ me_emishi_12_title:0 "$emishi_missions_task_12$"
  me_emishi_12_desc:0 ""
  me_emishi_12.a:0 ""
  me_emishi_12_tooltip:0 "The mission task '#Y $emishi_missions_task_12$#!' has now been #G Completed#!!"
 
- me_emishi_13_title:0 ""
+ me_emishi_13_title:0 "$emishi_missions_task_13$"
  me_emishi_13_desc:0 ""
  me_emishi_13.a:0 ""
  me_emishi_13_tooltip:0 "The mission task '#Y $emishi_missions_task_13$#!' has now been #G Completed#!!"
 
- me_emishi_14_title:0 ""
+ me_emishi_14_title:0 "$emishi_missions_task_14$"
  me_emishi_14_desc:0 ""
  me_emishi_14.a:0 ""
  me_emishi_14_tooltip:0 "The mission task '#Y $emishi_missions_task_14$#!' has now been #G Completed#!!"
@@ -356,7 +366,9 @@
 #Missions
 
 #Tooltips
-
+ yayoification_add_1_tt:0 "#Y Yayoification#! increases by #G 1#! point."
+ yayoification_sub_1_tt:0 "#Y Yayoification#! decreases by #G 1#! point."
+ 
 #Modifiers
 
 #Decisions
