--- a/localization/english/ti_cultures_l_english.yml
+++ b/localization/english/ti_cultures_l_english.yml
@@ -55,7 +55,12 @@
  fennic:0 "Fennic"
  sapmi:0 "Sapmi"
  #New Japonic
+ ainu:0 "Ezo"
+ dewa:0 "Dewa"
+ sunazawa:0 "Sunazawa"
+ mitinooku:0 "Sirakawa"
  duuchuu:0 "Duuchuu"
+ emishi:0 "Emishi"
  #New Rong
  nuomuhong:0 "Nuomuhong"
  gyalrong:0 "Gyalrong"
