--- a/localization/english/events/dhe_zou_ti_l_english.yml
+++ b/localization/english/events/dhe_zou_ti_l_english.yml
@@ -14,3 +14,11 @@
  
  mencius_grave: "Grave of Mencius"
  desc_mencius_grave: ""
+ 
+ #Actually for Teng
+ dhe_zou_ti.3.t: "Commune of Xu Xing"
+ dhe_zou_ti.3.desc: "" #The ruler of Teng is an upright and worthy ruler. However, he has yet to hear the Way. A wise ruler tills the land together with his people to make his living. He governs while cooking his own meals. Now, that Teng has granaries and treasuries means that [the ruler] inflicts hardship on the people to fatten himself. How can he be a worthy ruler?
+ dhe_zou_ti.3.a: ""
+ 
+ xu_xing_commune: "Commune of Xu Xing"
+ desc_xu_xing_commune: ""
