Tweaked Anatolia Setup to be closer to invictus
(add tags in rhodian terriotry + redistributed some pops)

--- a/localization/english/countries_l_english.yml
+++ b/localization/english/countries_l_english.yml
@@ -2260,6 +2260,8 @@
  EPM_ADJ:0 "Epidaurian"
  APO:0 "Apollonia"
  APO_ADJ:0 "Apollonian"
+ KER:0 "Keramos"
+ KER_ADJ:0 "Keramosian"
 
  # Marius Anatolians
  SLG:0 "Selgia"
